<resources>
    <string name="app_name" translatable="false">EasyScreen</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="postal_address">Postal Address</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="favorite">Favorite</string>
    <string name="other_contacts">Other contacts</string>
    <string name="create_contact">Create a new contact</string>
    <string name="search_for_a_contact">Search for a contact</string>
    <string name="contact_name">Contact name</string>
    <string name="back">Back</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="sendTo">Send to</string>
    <string name="addDocument">Add a document</string>
    <string name="send">Send</string>
    <string name="addContact">Add a contact</string>
    <string name="no_phone_number_error">This contact does not have a phone number</string>
    <string name="messageSent">Message sent</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="no_permission_message">EasyScreen must be granted certain permissions in order to work properly.\n Please restart the application and give EasyScreen the required permissions to use it.</string>
    <string name="no_messages_to_display">No messages to display</string>
    <string name="get_image_from">Get image from</string>
    <string name="get_image_gallery">Choose a picture in gallery</string>
    <string name="take_photo">Take a picture</string>
    <string name="noPhoneForSMS">No contact are selected. Please add a contact via the \"ADD CONTACT\" button</string>
    <string name="answer">Answer</string>
    <string name="textsize_option_large">Large</string>
    <string name="textsize_option_medium">Medium</string>
    <string name="textsize_option_small">Small</string>
    <string name="parameters_text_size_display">Text Size</string>
    <string name="parameters_bold_text_display">Bold Text</string>
    <string name="textsize_option_normal">Normal</string>
    <string name="textsize_option_bold">Bold</string>
    <string name="gallery_take_picture">Take a picture</string>
    <string name="contact_delete">Contact deleted</string>
    <string name="no_name_specified">PLease specifies a name for the contact</string>
    <string name="contact_save">Contact saved</string>
    <string name="url_saved">Page saved</string>
    <string name="access_favorites_pages">Access favorites pages</string>
    <string name="save_page_as_favorite">Save page as favorite</string>
    <string name="existing_url">This page is already saved</string>
    <string name="no_pages_in_favorites">No pages in favorites</string>
</resources>
