<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/parameters_textSizeDisplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/parameters_text_size_display"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/parameters_textsize_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="setGlobalTextSize"
            android:text="@string/textsize_option_small"
            app:layout_columnWeight="1" />

        <TextView
            android:id="@+id/parameters_textsize_large"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:onClick="setGlobalTextSize"
            android:text="@string/textsize_option_large" />

        <TextView
            android:id="@+id/parameters_textsize_medium"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setGlobalTextSize"
            android:text="@string/textsize_option_medium" />

        <TextView
            android:id="@+id/parameters_textStrongDisplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/parameters_bold_text_display"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/parameters_textsize_bold"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setGlobalTextBold"
            android:text="@string/textsize_option_bold" />

        <TextView
            android:id="@+id/parameters_textsize_normal"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setGlobalTextBold"
            android:text="@string/textsize_option_normal" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>